--- a/my-app/src/Component/Tag/styles/TagCss.module.css
+++ b/my-app/src/Component/Tag/styles/TagCss.module.css
@@ -31,7 +31,7 @@
 
 @media screen and (max-width:721px) and (min-width:363px){
     .tag{
-        width: 80% !important;
+        width: 100% !important;
         float: left !important;
     }
     .tagItem{
@@ -40,12 +40,13 @@
     .tagItem li{
         height: 15px !important;
         line-height: 15px !important;
-        width: 17% !important;
+        width: 18% !important;
         font-size: 13px !important;
         margin-bottom: 15px !important;
     }
     .tag h3{
         margin-bottom: 30px !important;
+        margin-left: 10px !important;
     }
 
 }
@@ -65,7 +66,7 @@
         line-height: 7px !important;
         border-radius: 8px !important;
         margin-bottom: 7px !important;
-        width: 14% !important;
+        width: 16% !important;
         font-size: 10px !important;
     }
     #tagtop{
@@ -75,6 +76,8 @@
     }
     .tag h3{
         margin-bottom: 30px !important;
+        margin-left: 5px !important;
+        font-size: 15px !important;
     }
 }
 .tag{
@@ -84,8 +87,9 @@
     margin-top: 0px;
 }
 .tag h3{
-    font-size: 23px !important;
+    font-size: 23px;
     float: left;
+    margin-left: 20px;
     margin-bottom: 5px;
 }
 
