--- a/my-app/src/Header/styles/Heder.module.css
+++ b/my-app/src/Header/styles/Heder.module.css
@@ -1,6 +1,7 @@
 @media screen and (max-width:721px) and (min-width:362px) {
     .LogoBox .Logo{
         font-size: 23px !important;
+        margin-left: 10px !important;
     }
     .InputBox{
         margin-left: 70px;
@@ -12,12 +13,13 @@
     .SerchBar{
         width: 100% !important;
         float: right !important;
+        margin-right: 14%;
         margin-top: 23px !important;
     }
     .SerchBtn{
     }
     .HederBox{
-        width: 80% !important;
+        width: 100% !important;
         margin-left:0%;
     }
     .LoginBtn{
@@ -70,8 +72,9 @@
 /* teset */
 @media screen and (max-width:361px) and (min-width:10px) {
     .HederBox{
-        width: 80% !important;
+        width: 100% !important;
         margin-left:0%;
+        overflow: hidden;
     }
     .LogoBox{
         width: 30% !important;
@@ -79,6 +82,7 @@
     }
     .LogoBox .Logo{
         font-size: 15px !important;
+        margin-left: 5px;
     }
     .TodayText{
         display: none;
@@ -89,6 +93,7 @@
     .SerchBar{
         margin-top: 25px !important;
         width: 100% !important;
+        margin-right: 45px;
     }
     .header{
         width: 100% !important;
@@ -140,6 +145,7 @@
 
 .header{
     display: block;
+    width: 100%;
     height: 60px;
     /* border-bottom: 1px solid gray; */
 }
