카테고ㅓ리 검색

--- a/my-app/src/Component/Carousel.module.css
+++ b/my-app/src/Component/Carousel.module.css
@@ -116,10 +116,10 @@
 
   .leftWn{
     float: left;
-    width: 35%;
+    width: auto;
   }
   .rightAr{
     float: right;
-    width: 60%;
+    width: auto;
     text-align: right;
   }
