어드민접근

--- a/my-app/src/pages/adminpage/style/adminpageCss.module.css
+++ b/my-app/src/pages/adminpage/style/adminpageCss.module.css
@@ -106,7 +106,9 @@ margin-left: 2%;
     margin-top: 60px;
 }
 #uploadBtn{
+    width: 100.72%;
     height: 35px;
+    margin-top: 10px;
 }
 
 /* https://i.imgur.com/bicvcUQ.jpg */
@@ -114,3 +116,6 @@ margin-left: 2%;
 
 
   
+#newEpH{
+    margin-top: 30px;
+}
