--- a/my-app/src/Component/mainRank.module.css
+++ b/my-app/src/Component/mainRank.module.css
@@ -47,7 +47,9 @@
 
 @media screen and (max-width:361px) and (min-width:10px){
     .HHH{
-        margin-top: 12px;
+        margin-top: 15px;
+        font-size: 16px !important;
+        margin-left: 15px;
     }
     .mrbox{
         width: 100% !important;
