--- a/my-app/src/styles/MainPageCss.module.css
+++ b/my-app/src/styles/MainPageCss.module.css
@@ -117,6 +117,7 @@
         margin-left: 20px !important;
     }   
     .AllToonInfo {
+        margin-left: 3.5% !important;
         width: calc(28% - 0px) !important; /* 각 요소의 너비를 33.3%로 설정 (여백 10px 제외) */
         margin-bottom: 10px; /* 요소들 사이의 간격 설정 */
     }
@@ -568,9 +569,10 @@
     }
     .AllToonInfo {
         margin-top: 4px;
-
+        margin-left: 1% !important;
+        margin-right: 1px !important;
         /* 솔 */
-        width: calc(33.3% - 1px) !important;
+        width: calc(33.3% - 5px) !important;
         height: 95px !important;
         float: left !important;
     }
@@ -638,14 +640,18 @@
 
 .AllToonInfo {
     height: auto ;
-    width: calc(25% - 20px); 
+    margin-right:1% ;
+    margin-left: 0px ;
+    width: calc(16.66% - 20px); 
     margin-bottom: 10px; /* 요소들 사이의 간격 설정 */
   }
-  @media (max-width: 1900px) and (min-width: 723px){
-    .AllToonInfo {
-      width: calc(24% - 20px) !important;
-    }
-  }
+
+
+  .ATimg{
+    width: 100% ;
+    height: 305px;
+    transition: transform 0.2s ease; /* 애니메이션 효과를 위한 transition 추가 */
+}
   .ATIMG{
     width: 80%;
     display: none;
@@ -851,12 +857,7 @@
 {
     color:gray;
 }
-.ATimg{
-    width: 100% ;
-    background-color: gray;
-    height: 305px;
-    transition: transform 0.2s ease; /* 애니메이션 효과를 위한 transition 추가 */
-}
+
 .AllToonInfo .ATimg:hover{
     transform: scale(1.1);
 }
