--- a/my-app/src/Component/mainRank.module.css
+++ b/my-app/src/Component/mainRank.module.css
@@ -1,4 +1,4 @@
-@media screen and (max-width:1799px) and (min-width:723px){
+@media screen and (max-width:3001px) and (min-width:723px){
     .mrbox{
         width: 100% !important;
     }
@@ -6,6 +6,10 @@
         width: 30% !important;
         margin-left: 0px !important;
     }
+    .RankImg img{
+        height: 260px !important;
+    }
+
 }
 @media screen and (max-width:721px) and (min-width:362px){
     .HHH{
@@ -26,7 +30,9 @@
         float: left !important;
         width: 100% !important;
     }
-
+    .RankImg img{
+        height: 300px !important;
+    }
 
     .Rank{
         width: 100% !important;
@@ -51,6 +57,10 @@
         font-size: 16px !important;
         margin-left: 15px;
     }
+    .RankImg img{
+        height: 220px !important;
+    }
+
     .mrbox{
         width: 100% !important;
 
@@ -124,6 +134,8 @@
 }
 
 .RankImg img{ 
+    width: 100%;
+    height: 260px;
     box-shadow: 2px 2px 2px 2px;
 }
 .RankImg{
