--- a/my-app/src/Header/styles/Heder.module.css
+++ b/my-app/src/Header/styles/Heder.module.css
@@ -16,10 +16,10 @@
         width: 100% !important;
         float: right !important;
         margin-right: 14%;
-        margin-top: 23px !important;
     }
     .SerchBtn{
     }
+
     .HederBox{
         width: 100% !important;
         margin-left:0%;
@@ -77,6 +77,9 @@
         margin-left:0%;
         overflow: hidden;
     }
+    .header{
+        height: 60px !important;
+    }
     .LogoBox{
         width: 30% !important;
         height: 100%;
@@ -84,6 +87,7 @@
     .LogoBox .Logo{
         font-size: 15px !important;
         margin-left: 5px;
+        margin-top: 0px !important;
     }
     .TodayText{
         display: none;
@@ -147,7 +151,7 @@
 .header{
     display: block;
     width: 100%;
-    height: 60px;
+    height: 75px;
     /* border-bottom: 1px solid gray; */
 }
 .TopHeader{
@@ -160,6 +164,7 @@
     width: 50%;    
 }
 .header .Logo{
+    margin-top: 5px;
     font-size: 27px;
     float: left;
     width: 10%;
@@ -181,7 +186,7 @@
 .SerchBar{
     float: right;
     width: 70%;
-    margin-top: 17px;
+    margin-top: 30px;
 
 }
 .SerchBar input{
