--- a/my-app/src/pages/adminpage/style/adminpageCss.module.css
+++ b/my-app/src/pages/adminpage/style/adminpageCss.module.css
@@ -181,3 +181,38 @@
     margin-bottom: 10px;
     margin-top: 10px;
 }
+.epEn{
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+.hoverP{
+    float: left;
+    position: absolute;
+    width: 300px;
+    color:white;
+
+    height: 30px;
+    background-color: rgba(0, 0, 0, 0.7); /* 배경에 반투명한 검정색 추가 */
+    bottom: 0px;
+}
+.lp{
+    margin-top: 4px;
+    float: left;
+    margin-left:7px;
+    width: auto;
+}
+.rp{
+    margin-top: 4px;
+    margin-right: 7px;
+    float: right;
+    width: auto;
+}
+.show{
+    background-color: gray;
+    width: 300px;
+    height: 380px;
+    float: left;
+}
+.show img{
+    height: 380px;
+}
